# libflash_attn

./: .gitignore  CMakeLists.txt  README.md  ncu_report_helper.py  read_ncu_rep.py  test.sh  test_large_dim.sh
src/: bench.cc  flash.cu  flash_fwd_launch_template.h  main.cc
